--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mishguru/package": "^5.1.0"
   },
   "dependencies": {
+    "colors": "^1.3.3",
     "google-auth-library": "^2.0.1",
     "googleapis": "^35.0.0"
   }
